Closed Bug 1213545 Opened 9 years ago Closed 9 years ago

'x-offset' and 'y-offset' of box-shadow are ignored if 'inset' and 'blur-radius' are specified

Categories

(Core :: Layout, defect)

44 Branch
x86
Windows
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla44
Tracking Status
firefox41 --- unaffected
firefox42 --- unaffected
firefox43 --- unaffected
firefox44 - verified

People

(Reporter: masayuki, Assigned: mchang)

References

()

Details

(Keywords: css3, regression, Whiteboard: [parity-Chrome][parity-IE])

Attachments

(1 file)

See the testcase: http://jsfiddle.net/ovLznyu0/1/

x-offset and y-offset are treated as 0 if the box-shadow is inset and blurred. See the testcase with Chrome or IE if you need to see what is the expected rendering.

Original report: https://input.mozilla.org/ja/dashboard/response/5625179

[Tracking Requested - why for this release]:

Due to new regression of 44.
Assignee: nobody → mchang
Carries over the x,y offsets calculated in layout and moves the destination rect of the inset box shadow by the offsets.
Attachment #8674497 - Flags: review?(mstange)
Attachment #8674497 - Flags: review?(mstange) → review+
See Also: → 1216200
https://hg.mozilla.org/mozilla-central/rev/2965de9363e9
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
Verified fixed FF 44.0a1 (2015-10-25) Win 7
Status: RESOLVED → VERIFIED
Given that this bug has been fixed and verified, I do not see a reason to track this for 44 anymore.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: