Bug 1213545. Carry x,y offsets with inset box shadows. r=mstange